<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo2"
    android:padding="16dp"
    tools:context=".view.ProdutoActivity">


    <EditText
        android:id="@+id/edtNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_produto"
        android:textColor="#131C1C" />

    <EditText
        android:id="@+id/edtPrecoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/preco_do_produto"
        android:inputType="numberDecimal"
        android:textColor="#131C1C" />

    <Button
        android:id="@+id/btnSalvar"
        style="@style/btn_purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#FF5722"
        android:text="@string/salvar" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/lvProdutos"
        ></ListView>

</LinearLayout>