<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo"
    android:padding="16dp"
    tools:context=".view.CarrinhoItemActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/produto"
        android:textColor="#131C1C"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerProduto"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/quantidade"
        android:textColor="#090909"
        android:textSize="16sp" />

    <NumberPicker
        android:id="@+id/npQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btnEnviar"
        style="@style/btn_purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FF5722"
        android:text="@string/enviar" />

</LinearLayout>