<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo2"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.MainActivity">


    <Button
        android:id="@+id/btnGerenciarProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/gerenciar_produtos"
        android:textColor="@color/colorTextButton"
        android:layout_margin="16dp"/>


    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnAdicionarProduto"
            style="@style/btn_danger"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:text="@string/adicionar_produto" />

        <Button
            android:id="@+id/btnLimparLista"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="#F44336"
            android:text="@string/limpar_lista"
            android:textColor="@color/colorTextButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left">

        <Button
            android:id="@+id/btnJogadores"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="#FF5722"
            android:text="@string/pesquisar_jogadores"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/total"
            android:textColor="#131C1C"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:textSize="25sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvCarrinhoItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />


</LinearLayout>